# run_deep_tmhmm

./: README.md  pyproject.toml
src/run_deep_tmhmm/: __init__.py  deep_tmhmm.py
