[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "run_deep_tmhmm"
version = "0.0.1"
authors = [
  { name = "Andrey Rozenberg", email = "alephreish@gmail.com" }
]
description = "DeepTMHMM wrapper"
readme = "README.md"
requires-python = ">=3.8, <3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "biopython==1.79",
    "certifi==2022.9.24",
    "charset-normalizer==2.1.1",
    "cycler==0.11.0",
    "fair-esm==0.4.0",
    "fonttools==4.38.0",
    "future==0.18.2",
    "h5py==3.7.0",
    "idna==3.4",
    "kiwisolver==1.4.4",
    "matplotlib==3.5.2",
    "numpy==1.22.4",
    "packaging==21.3",
    "PeptideBuilder==1.1.0",
    "Pillow==9.3.0",
    "pyparsing==3.0.9",
    "python-dateutil==2.8.2",
    "requests==2.28.1",
    "six==1.16.0",
    "torch==1.12.1+cu113",
    "tqdm==4.64.1",
    "urllib3==1.26.12",
    "numba",
    "joblib",
    "threadpoolctl",
    "llvmlite",
]

[project.urls]
"Homepage" = "https://github.com/BejaLab/run_deep_tmhmm"
"Bug Tracker" = "https://github.com/BejaLab/run_deep_tmhmm/issues"

[project.scripts]
deep_tmhmm_init = "run_deep_tmhmm:init_cli"
deep_tmhmm_run = "run_deep_tmhmm:run_cli"
